force-app/main/default/objects/Account/fields/account_field__c.field-meta.xml
<CustomField>
    <fullName>account_field__c</fullName>
    <label>account field</label>
    <length>210</length>
    <type>Text</type>
</CustomField>