force-app/main/default/objects/Account/fields/Account_file__c.field-meta.xml
<CustomField>
    <fullName>Account_file__c</fullName>
    <label>Account file</label>
    <length>200</length>
    <type>Text</type>
</CustomField>