force-app/main/default/objects/Account/fields/file1__c.field-meta.xml
<CustomField>
    <fullName>file1__c</fullName>
    <label>file1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>