force-app/main/default/objects/Account/fields/file4__c.field-meta.xml
<CustomField>
    <fullName>file4__c</fullName>
    <label>file4</label>
    <length>220</length>
    <type>Text</type>
</CustomField>