force-app/main/default/objects/Account/fields/maindev__c.field-meta.xml
<CustomField>
    <fullName>maindev__c</fullName>
    <label>maindev2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>