force-app/main/default/objects/Account/fields/pipeline__c.field-meta.xml
<CustomField>
    <fullName>pipeline__c</fullName>
    <label>pipeline</label>
    <length>200</length>
    <type>Text</type>
</CustomField>