force-app/main/default/objects/Account/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <length>200</length>
    <type>Text</type>
</CustomField>