force-app/main/default/objects/Account/fields/system_file__c.field-meta.xml
<CustomField>
    <fullName>system_file__c</fullName>
    <label>system file</label>
    <length>200</length>
    <type>Text</type>
</CustomField>