force-app/main/default/objects/Account/fields/test4__c.field-meta.xml
<CustomField>
    <fullName>test4__c</fullName>
    <label>test4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>